--- a/skin.estuary.mod/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.mod/language/resource.language.fr_fr/strings.po
@@ -889,8 +889,8 @@ msgid "Show background video"
 msgstr "Afficher la vidéo en arrière-plan"
 
 msgctxt "#40084"
-msgid "Default Widgets"
-msgstr "Widgets par défaut"
+msgid "Type of Widgets"
+msgstr "Type de Widgets"
 
 msgctxt "#40085"
 msgid "Skin Helper Service Widgets"
@@ -1399,8 +1399,8 @@ msgid "Custom widget (icons)"
 msgstr "Widget personnalisé (icônes)"
 
 msgctxt "#40214"
-msgid "Select default widget"
-msgstr "Définir le widget par défaut"
+msgid "Set type of widgets"
+msgstr "Définir le type des widgets"
 
 msgctxt "#40215"
 msgid "Hide posters info"
@@ -1461,3 +1461,7 @@ msgstr "Hub personnalisé 2"
 msgctxt "#40229"
 msgid "Custom Hub 3"
 msgstr "Hub personnalisé 3"
+
+msgctxt "#40230"
+msgid "Hub Widget"
+msgstr "Widget Hub"
