--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,3 +1,7 @@
+[B]1.3.11[/B]
+• Changes in TV Shows/Custom (Thumbs) widgets
+• Improve esthetic appearance
+
 [B]1.3.10[/B]
 • Add possibility to change type of widgets for preconfigured widgets
 • Add new Hub widget
