--- a/skin.estuary.mod/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.mod/language/resource.language.en_gb/strings.po
@@ -1653,3 +1653,7 @@ msgstr ""
 msgctxt "#40235"
 msgid "No screenshot available"
 msgstr ""
+
+msgctxt "#40236"
+msgid "Use clearlogos instead of thumbnails"
+msgstr ""
