--- a/skin.estuary.mod/language/resource.language.en_gb/strings.po
+++ b/skin.estuary.mod/language/resource.language.en_gb/strings.po
@@ -810,9 +810,13 @@ msgctxt "#40020"
 msgid "Replace vertical home menu by horizontal menu."
 msgstr ""
 
-# empty strings "40021"
+msgctxt "#40021"
+msgid "Enable horizontal advanced menu"
+msgstr ""
 
-# empty strings "40022"
+msgctxt "#40022"
+msgid "Replace vertical home menu by horizontal advanced menu."
+msgstr ""
 
 msgctxt "#40023"
 msgid "Set images path"
