Added Contributing Guidelines
• Move RSS at bottom
• Fix Seekbar color
• Fix Seekbar label
• Improve esthetic appearance
• PVR channel windows now can be used as Kodi start windows

--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,7 +1,10 @@
 [B]1.5.2[/B]
 • Add support for Library Editor addon
-• Fix RSS
+• Move RSS at bottom
+• Fix Seekbar color
+• Fix Seekbar label
 • Improve esthetic appearance
+• PVR channel windows now can be used as Kodi start windows
 
 [B]1.5.1[/B]
 • Fix on music visualisation
