--- a/skin.estuary.mod/language/resource.language.fr_fr/strings.po
+++ b/skin.estuary.mod/language/resource.language.fr_fr/strings.po
@@ -593,6 +593,11 @@ msgctxt "#31141"
 msgid "Changes for version"
 msgstr "Changements"
 
+#: /1080i/Variables.xml
+msgctxt "#31142"
+msgid "Play speed"
+msgstr "Vitesse de lecture"
+
 msgctxt "#40000"
 msgid "Show movies and tv shows clearlogos"
 msgstr "Afficher les logos des films et séries TV"
