--- a/skin.estuary.mod/changelog.txt
+++ b/skin.estuary.mod/changelog.txt
@@ -1,6 +1,7 @@
 [B]1.5.3[/B]
 • Add aired time, season and episode number for next aired widget
 • Add fallback music disc (Thanks emiralles)
+• Add possibility to delete / add more one rule for smartplaylist
 • Improve esthetic appearance
 • Fix media settings icon
 • Krypton : Update DialogGameControllers.xml
